2009-11-22  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-fontifying-fu.el (slime-compute-region-for-font-lock): Set
	an upper limit for the starting point of searching for suppressed
	forms.

	* slime-parse.el (slime-make-form-spec-from-string): Minor
	optimizations.
	(slime-parse-form-upto-point): Refactored to not use `reduce' but
	bultins.
	(slime-make-form-spec-from-string, slime-parse-form-upto-point)
	(slime-compare-char-syntax): Byte-compile.

2009-11-21  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-asdf.lisp (asdf-determine-system): Also try to determine
	the current system by looking at the buffer-package.

	* slime-asdf (slime-read-system-name): Adapted accordingly.

2009-11-20  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-position-in-history): Add new optional
	parameter `exclude-string'.
	(slime-repl-history-replace): Don't replace history item if it's exactly
	matching the current input, search for the next match instead.

2009-11-19  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-asdf.el (slime-query-replace-system): Enable TAB
	completion of symbol names.

	* slime-fuzzy.el (slime-fuzzy-completions): Do not use
	`slime-find-buffer-package' it's an internal operation of
	`slime-current-buffer'.

2009-11-17  Tobias C. Rittweiler  <tcr@freebits.de>

	M-x slime-isearch-system will run `isearch-forward' on all files
	pertaining to an ASDF system.

	M-x slime-query-replace-system will run `query-replace' on all
	files pertaining to an ASDF system.

	* slime-asdf.el (slime-read-system-name): Refactored so callers
	have choice over how the default value is computed.
	(slime-find-asd-file): Renamed from `slime-find-asd'.
	(slime-determine-asdf-system): New helper.
	(slime-isearch-system): New function. Depends on functionality
	only available on GNU Emacs 23.1.x.
	(slime-query-replace-system): New function.

2009-11-17  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp (asdf-determine-system): Rewritten to be much